--- a/package.json
+++ b/package.json
@@ -53,12 +53,9 @@
     "jest": "^21.2.1",
     "jest-styled-components": "^4.7.0",
     "prettier": "^1.7.3",
-    "prop-types": "^15.6.0",
     "raf": "^3.4.0",
-    "react": "^16.0.0",
     "react-dom": "^16.0.0",
-    "react-test-renderer": "^16.0.0",
-    "styled-components": "^2.2.1"
+    "react-test-renderer": "^16.0.0"
   },
   "files": [
     "es",
