--- a/package.json
+++ b/package.json
@@ -10,7 +10,8 @@
     "lint": "eslint './**/*.{js,jsx}'",
     "prettier": "prettier --write './**/*.{js,jsx}'",
     "build": "gulp build",
-    "prepare": "npm test && npm run test:flow && npm run lint && npm run build"
+    "clean": "rimraf es lib",
+    "prepare": "npm run clean && npm test && npm run test:flow && npm run lint && npm run build"
   },
   "keywords": [
     "vertical",
@@ -53,9 +54,13 @@
     "jest": "^21.2.1",
     "jest-styled-components": "^4.7.0",
     "prettier": "^1.7.3",
+    "prop-types": "^15.6.0",
     "raf": "^3.4.0",
+    "react": "^16.0.0",
     "react-dom": "^16.0.0",
-    "react-test-renderer": "^16.0.0"
+    "react-test-renderer": "^16.0.0",
+    "rimraf": "^2.6.2",
+    "styled-components": "^2.2.0"
   },
   "files": [
     "es",
